--- a/src/index.html
+++ b/src/index.html
@@ -115,14 +115,14 @@
             <div class="about__wrapper">
                 <img src="img/about.jpg" alt="photo" class="about__photo">
                 <div class="about__descr">
-                    <h2 class="title title_fz16 about__title">Про меня</h2>
+                    <h2 class="title title_fz16 about__title title_about">Про меня</h2>
                     <div class="title title_fz36 about__subtitle">Меня зовут Павел</div>
                     <div class="divider"></div>
                     <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                 </div>
                 <div class="about__skills">
                     <div class="about__skills-item">
-                        <div>
+                        <div class="about__skills-circle">
                             <img src="icons/about_me/web_development.svg" alt="web-dev">
                         </div>
                         <div>
@@ -134,7 +134,7 @@
                     </div>
                     
                     <div class="about__skills-item">
-                        <div>
+                        <div class="about__skills-circle">
                             <img src="icons/about_me/mobile_dev.svg" alt="mob-dev">
                         </div>
                         <div>
@@ -146,7 +146,7 @@
                     </div>
 
                     <div class="about__skills-item">
-                        <div>
+                        <div class="about__skills-circle">
                             <img src="icons/about_me/design.svg" alt="design">
                         </div>
                         <div>
@@ -157,6 +157,39 @@
                         </div>
                     </div>
 
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="skills">
+        <div class="container">
+            <h2 class="title title_fz16 title__section-title
+            title_skills">Навыки</h2>
+            <div class="title title_fz36 title__section-subtitle title_skills">Что я использую в работе</div>
+            <div class="divider"></div>
+
+            <div class="skills__items">
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/html5.svg" alt="html5">
+                    </div>
+                    <h3 class="title title_fz14">HTML5</h3>
+                    <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта</p>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/css3.svg" alt="css3">
+                    </div>
+                    <h3 class="title title_fz14">CSS3</h3>
+                    <p>Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!</p>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/js.svg" alt="java script">
+                    </div>
+                    <h3 class="title title_fz14">Java Script</h3>
+                    <p>Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое</p>
                 </div>
             </div>
         </div>
